# Clock-Timer

./: .gitignore  CMakeLists.txt  ClockTimerApp_en_150.ts  README.md  clocktimerapp.cpp  clocktimerapp.h  clocktimerapp.ui  main.cpp  resources.rc
android/: AndroidManifest.xml
design/: clocktimerapp.ui
include/: analog_clock.h  clock_timer_app.h  clocktimerapp.h  clockwidget.h  history_model.h  historymodel.h  hoverbutton.h  int_range_validator.h  intrangevalidator.h  settings.h  timedrawwidget.h  utilities.h  utils.h
resources/: ButtonInstance.qml  HistoryItem.qml  Styles.qml  main.qml  qml.qrc
resources/styles/: main.css
src/: clock_timer_app.cpp  clocktimerapp.cpp
